# nonebot-plugin-template

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme_template.md
.github/workflows/: ci.yml  codecov.yml  pypi-publish.yml  pytest.yml  release-draft.yml  rename.yml  ruff.yml  test-load.yml
nonebot_plugin_template/: __init__.py  config.py  matcher.py
nonebot_plugin_template_les/: __init__.py  config.py
src/nonebot_plugin_template/: __init__.py
tests/: conftest.py  fake.py  plugin_test.py
