[project]
name = "nonebot-plugin-template"
version = "0.0.1"
description = "插件描述"
readme = "README.md"
authors = [{name = "fllesser", email = "fllessive@gmail.com"}]
requires-python =">=3.10,<3.13"
dependencies = [
    "httpx>=0.26.0,<1.0.0",
    "nonebot2>=2.4.0,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "nonebot-plugin-alconna>=0.54.2,<1.0.0",
    "nonebot-plugin-localstore>=0.7.3,<1.0.0",
    "nonebot-plugin-apscheduler>=0.5.0,<1.0.0"
]

[project.optional-dependencies]
test = [
    "nb-cli>=1.4.2,<2.0.0",
    "nonebot2[fastapi]>=2.4.0,<3.0.0"
]

[tool.uv]
working-directory = "nonebot_plugin_tempalte_les"

[tool.nonebot]
adapters = [{name="Onebot", module_name="nonebot.adapters.onebot.v11"}]
plugins = ["nonebot_plugin_template"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"